--- a/style.css
+++ b/style.css
@@ -53,6 +53,7 @@
     background-repeat:no-repeat, no-repeat;
     background-position: right 48vw bottom 40vh,
     left 45vw top 44vh;
+    overflow: hidden;
   }
   .profile-card{
     display:flex;
